Fix resize as fullscreen
Firefox fires two resize event when going fullscreen:
one for height, one for width.
Add jquery.unevent to add a pause to resize to only call startAnimation()
once per full resize event.
Also fix all errors from make check.

--- a/css/style.css
+++ b/css/style.css
@@ -622,7 +622,7 @@ blockquote.tiktok-embed {
 /* Collapser Animations */
 .slide-in {
     max-height: 1000px;
-    left: 0px;
+    left: 0;
 }
 
 .vslide {
@@ -631,5 +631,5 @@ blockquote.tiktok-embed {
     transition: all 0.5s ease-in-out;
 }
 
-.vslide-closed { max-height: 0px; }
+.vslide-closed { max-height: 0; }
 .vslide-opened { max-height: 500px; }
